feat: Initialize prices on store registration
